<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="textViewCalculadoraIMC">Calculadora IMC</string>
    <string name="textViewAlterarDados">Alterar dados</string>
    <string name="buttonAlterar">Alterar</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="peso">Peso:</string>
    <string name="textViewkg">0.0 kg</string>
    <string name="altura">Altura: </string>
    <string name="textViewcm">0.0 cm</string>
    <string name="buttonAlterarPeso">ALTERAR PESO</string>
    <string name="buttonAlterarAltura">ALTERAR ALTURA</string>
    <string name="buttonCalcular">CALCULAR</string>
    <string name="textViewResultado">Resultado</string>
    <string name="textViewAperteOBotao">Aperte o botão para calcular!</string>
</resources>
