<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewCalculadoraIMC"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
    />

    <EditText
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0.0 kg"
            android:id="@+id/txtPeso"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
    />


    <EditText
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textViewcm"
            android:id="@+id/txtAltura"
    />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        
        <Button
            android:id="@+id/buttonAlterarPeso"
            android:text="@string/buttonAlterarPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
                android:id="@+id/buttonAlterarAltura"
                android:text="@string/buttonAlterarAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        
    </LinearLayout>


    <Button
            android:id="@+id/buttonCalcular"
            android:layout_gravity="center"
            android:text="@string/buttonCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewResultado"
            android:id="@+id/txtResultado"
    />



    <TextView
            android:id="@+id/textViewAperteOBotao"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewAperteOBotao"
    />


</LinearLayout>