<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAlterarDados"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
    />




    <Button
            android:text="@string/buttonAlterar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <Button
            android:text="@string/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



</LinearLayout>